# rpawomaster

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md  build.rs  install.ps1
.github/workflows/: release.yaml  rust.yaml
examples/: README.md  add.sh  crypt.sh  delete.sh  export.sh  gen.sh  init.sh  list.sh  search.sh  testpass.sh  update.sh  vaults.sh
src/: configtool.rs  lib.rs  main.rs  passgen.rs  pwsmanager.rs  securecrypto.rs  setclip.rs  xotp.rs
src/commands/: add.rs  crypt.rs  delete.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  password_gen.rs  search.rs  testpass.rs  update.rs  vaults.rs  xotp.rs
tests/: test_passgen.rs  test_pwsmanager.rs  test_securecrypto.rs  test_setclip_core.rs  test_setclip_spawn.rs  test_xotp.rs
