[package]
name = "rpawomaster"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
unicode-segmentation = "1.10"
zxcvbn = "3.1.0"
rsa = { version = "0.9", features = ["pem", "serde"] }
pkcs8 = { version = "0.10", features = ["pem", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
aes-gcm = "0.10"
rpassword = "7.2"
hex = "0.4"
pbkdf2 = "0.11"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde", "local-offset"] }
