[package]
name = "rpawomaster"
version = "0.1.8"
edition = "2024"
authors = ["Sidney Zhang <zly@lyzhang.me>"]
description = "A secure password manager written in Rust"
license = "MulanPSL-2.0"
repository = "https://github.com/SidneyLYZhang/rpawomaster"
keywords = ["cli", "tool", "passwords_manager"]
categories = ["command-line-utilities"]

build = "build.rs"

[package.metadata]
watch.data = ["data/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
unicode-segmentation = "1.10"
zxcvbn = "3.1.0"
rsa = { version = "0.9", features = ["pem", "serde"] }
pkcs8 = { version = "0.10.2"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
aes-gcm = "0.10"
rpassword = "7.2"
hex = "0.4"
pbkdf2 = "0.11"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4.41", features = ["serde", "alloc"] }
rusqlite = "0.29.0"
anyhow = "1.0"
base64 = "0.22"
sled = "0.34.7"
uuid = { version = "1.17", features = ["v4","serde"]}
aes = "0.8"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"]}
walkdir = "2.3"
tar = "0.4"       # 新增tar支持
flate2 = "1.0"    # 新增tar.gz支持
tempfile = "3.3"  # 新增临时文件支持
bincode = { version = "2.0.1", features = ["serde"]}
arboard = "3.6.0"

[dev-dependencies]
walkdir = "2.4"
tempfile = "3.8"
rpawomaster = { path = "." }
